# historias-clinicas

./: .dockerignore  .env.example  .gitignore  ALEMBIC_GUIDE.md  ATTACHMENTS_TESTING_GUIDE.md  Dockerfile  FLY_DEPLOYMENT_GUIDE.md  GIT_STRATEGY.md  INSTRUCTIONS.md  MULTIPLE_FILES_GUIDE.md  MULTIPLE_FILES_SUMMARY.md  NEXT_SESSION.md  POSTGRESQL_SETUP_GUIDE.md  PYTHONANYWHERE_DEPLOYMENT_GUIDE.md  README.md  RENDER_DEPLOYMENT_GUIDE.md  REPORT_TESTING_GUIDE.md  SESSION_SUMMARY.md  TODO.md  VISUAL_INDICATORS.md  alembic.ini  build.sh  create_test_study.py  deploy_pythonanywhere.sh  docker-compose.yml  fly.toml  gen_hash.py  generate_hash.py  migrate.py  populate_db.py  pyproject.toml  render.yaml  rxconfig.py  start.sh  test_backup.py  test_reports.py
.web/public/: sitemap.xml
alembic/: env.py
alembic/versions/: 86f029a95caf_add_medical_studies_table.py  cf4acbd721e1_initial_migration_patients_.py  f7c1c2c56c0c_add_patient_files_study_files_and_.py
app/: __init__.py  app.py  config.py  database.py
app/api/: __init__.py  download.py  studies.py
app/components/: __init__.py  attachments.py  navbar.py  patient_files.py  patient_selector.py
app/models/: __init__.py  consultation.py  consultation_file.py  medical_study.py  medication.py  patient.py  patient_file.py  study_file.py
app/pages/: __init__.py  consultation_detail.py  consultations.py  dashboard.py  login.py  medical_studies.py  patient_detail.py  patients.py  reports.py  settings.py
backups/: .gitkeep
docs/: BACKUP_SYSTEM.md  REPORTES_SISTEMA.md
examples/: medical_studies_example.py
(+23 files in other folders)
