[project]
name = "medical-records"
version = "0.1.0"
description = "Sistema de Gestión de Historias Clínicas"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "reflex>=0.4.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.9",
    "mysqlclient>=2.2.0",
    "alembic>=1.13.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "email-validator>=2.1.0",
    "argon2-cffi>=25.1.0",
    "openpyxl>=3.1.5",
    "reportlab>=4.4.4",
    "fastapi>=0.119.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
pdf = [
    "reportlab>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]  # Línea demasiado larga (ya configurado en line-length)

[dependency-groups]
dev = [
    "ruff>=0.14.1",
]
